Completata card prodotto con hover

--- a/index.html
+++ b/index.html
@@ -29,12 +29,27 @@
     <main>
 
         <div class="container">
-            <div class="product-card"></div>
-            <div class="product-card"></div>
-            <div class="product-card"></div>
-            <div class="product-card"></div>
-            <div class="product-card"></div>
-            <div class="product-card"></div>
+
+            <div class="product-card">
+                <div class="p-images">
+                    <img src="./img/1.webp" alt="" class="image hover-img">
+                    <img src="./img/1b.webp" alt="" class="image">
+                    <div class="like-heart">&#x2665;</div>
+                    <div class="labels">
+                        <div class="discount">-50%</div>
+                        <div class="tag-1">Sostenibilità</div>
+                    </div>
+                </div>
+                <div class="brand">Levi's</div>
+                <div class="product-name">MAGLIETTA</div>
+                <div class="price">
+                    <span class="real-price">10.00</span>
+                    <span class="old-price">12.00</span>
+                </div>
+            </div>  
+            
+            
+
         </div>
 
     </main>
@@ -50,6 +65,7 @@
             </div>
             <div class="footer-right">
                 <div>Lorem ipsum</div>
+                 <!-- TODO Mettere le icone -->
                 <div>O O O O O</div>
             </div>
         </div>
