--- a/index.html
+++ b/index.html
@@ -35,111 +35,110 @@
 
         <div class="container">
 
+            <!-- Product 1 -->
             <div class="product-card">
                 <div class="p-images">
-                    <img src="./img/1.webp" alt="" class="image hover-img">
-                    <img src="./img/1b.webp" alt="" class="image">
+                    <img src="./img/1.webp" alt="img1" class="image hover-img">
+                    <img src="./img/1b.webp" alt="img1b" class="image">
                     <div class="like-heart">&#x2665;</div>
                     <div class="labels">
-                        <div class="discount">-50%</div>
-                        <div class="tag-1">Sostenibilità</div>
+                        <div class="discount lab">-50%</div>
+                        <div class="tag-1 lab">Sostenibilità</div>
                     </div>
                 </div>
                 <div class="brand">Levi's</div>
-                <div class="product-name">MAGLIETTA</div>
+                <div class="product-name">Relaxed Fit Tee Unisex</div>
                 <div class="price">
-                    <span class="real-price">10.00</span>
-                    <span class="old-price">12.00</span>
+                    <span class="real-price">14.99 €</span>
+                    <span class="old-price">29.99 €</span>
                 </div>
             </div> 
 
+            <!-- Product 2 -->
             <div class="product-card">
                 <div class="p-images">
-                    <img src="./img/1.webp" alt="" class="image hover-img">
-                    <img src="./img/1b.webp" alt="" class="image">
+                    <img src="./img/2.webp" alt="img2" class="image hover-img">
+                    <img src="./img/2b.webp" alt="img2b" class="image">
                     <div class="like-heart">&#x2665;</div>
                     <div class="labels">
-                        <div class="discount">-50%</div>
-                        <div class="tag-1">Sostenibilità</div>
+                        <div class="discount lab">-30%</div>
                     </div>
                 </div>
-                <div class="brand">Levi's</div>
-                <div class="product-name">MAGLIETTA</div>
+                <div class="brand">Guess</div>
+                <div class="product-name">Roses Tee</div>
                 <div class="price">
-                    <span class="real-price">10.00</span>
-                    <span class="old-price">12.00</span>
+                    <span class="real-price">20.99 €</span>
+                    <span class="old-price">29.99 €</span>
                 </div>
             </div>  
 
+            <!-- Product 3 -->
             <div class="product-card">
                 <div class="p-images">
-                    <img src="./img/1.webp" alt="" class="image hover-img">
-                    <img src="./img/1b.webp" alt="" class="image">
+                    <img src="./img/3.webp" alt="img3" class="image hover-img">
+                    <img src="./img/3b.webp" alt="img3b" class="image">
                     <div class="like-heart">&#x2665;</div>
                     <div class="labels">
-                        <div class="discount">-50%</div>
-                        <div class="tag-1">Sostenibilità</div>
+                        <div class="discount lab">-30%</div>
                     </div>
                 </div>
-                <div class="brand">Levi's</div>
-                <div class="product-name">MAGLIETTA</div>
+                <div class="brand">Come Zucchero Filato</div>
+                <div class="product-name">Voglia di Colori Pastello</div>
                 <div class="price">
-                    <span class="real-price">10.00</span>
-                    <span class="old-price">12.00</span>
+                    <span class="real-price">129.99 €</span>
+                    <span class="old-price">184.99 €</span>
                 </div>
             </div>  
 
+            <!-- Product 4 -->
             <div class="product-card">
                 <div class="p-images">
-                    <img src="./img/1.webp" alt="" class="image hover-img">
-                    <img src="./img/1b.webp" alt="" class="image">
+                    <img src="./img/4.webp" alt="img4" class="image hover-img">
+                    <img src="./img/4b.webp" alt="img4b" class="image">
                     <div class="like-heart">&#x2665;</div>
                     <div class="labels">
-                        <div class="discount">-50%</div>
-                        <div class="tag-1">Sostenibilità</div>
+                        <div class="discount lab">-50%</div>
+                        <div class="tag-1 lab">Sostenibilità</div>
                     </div>
                 </div>
                 <div class="brand">Levi's</div>
-                <div class="product-name">MAGLIETTA</div>
+                <div class="product-name">Tee Unisex</div>
                 <div class="price">
-                    <span class="real-price">10.00</span>
-                    <span class="old-price">12.00</span>
+                    <span class="real-price">14.99 €</span>
+                    <span class="old-price">29.99 €</span>
                 </div>
             </div>  
 
+            <!-- Product 5 -->
             <div class="product-card">
                 <div class="p-images">
-                    <img src="./img/1.webp" alt="" class="image hover-img">
-                    <img src="./img/1b.webp" alt="" class="image">
+                    <img src="./img/5.webp" alt="img5" class="image hover-img">
+                    <img src="./img/5b.webp" alt="img5b" class="image">
                     <div class="like-heart">&#x2665;</div>
-                    <div class="labels">
-                        <div class="discount">-50%</div>
-                        <div class="tag-1">Sostenibilità</div>
-                    </div>
                 </div>
-                <div class="brand">Levi's</div>
-                <div class="product-name">MAGLIETTA</div>
+                <div class="brand">Maya Deluxe</div>
+                <div class="product-name">Stripe Bodice</div>
                 <div class="price">
-                    <span class="real-price">10.00</span>
-                    <span class="old-price">12.00</span>
+                    <span class="real-price">99.99 €</span>
+                    <span class="old-price"></span>
                 </div>
             </div>  
 
+            <!-- Product 6 -->
             <div class="product-card">
                 <div class="p-images">
-                    <img src="./img/1.webp" alt="" class="image hover-img">
-                    <img src="./img/1b.webp" alt="" class="image">
+                    <img src="./img/6.webp" alt="img6" class="image hover-img">
+                    <img src="./img/6b.webp" alt="img6b" class="image">
                     <div class="like-heart">&#x2665;</div>
                     <div class="labels">
-                        <div class="discount">-50%</div>
-                        <div class="tag-1">Sostenibilità</div>
+                        <div class="tag-1 lab">Sostenibilità</div>
                     </div>
                 </div>
-                <div class="brand">Levi's</div>
-                <div class="product-name">MAGLIETTA</div>
+                <div class="brand">Esprit</div>
+                <div class="product-name">Maglione - Black</div>
                 <div class="price">
-                    <span class="real-price">10.00</span>
-                    <span class="old-price">12.00</span>
+                    <span class="real-price">29.99 €</span>
+                    <span class="old-price"></span>
                 </div>
             </div>  
             
@@ -152,13 +151,13 @@
 
         <div class="container">
             <div class="footer-left">
-                <div>Lorem ipsum</div>
+                <div><strong>Boolando S.r.l.</strong></div>
                 <span class="footer-links"><a href="#">Informazioni legali</a></span>
                 <span class="footer-links"><a href="#">Informativa sulla privacy</a></span>
                 <span class="footer-links"><a href="#">Diritto di recesso</a></span>
             </div>
             <div class="footer-right">
-                <div style="text-align: center;">Lorem ipsum</div>
+                <div style="text-align: center;"><strong>Trovaci anche su</strong></div>
                 <div class="nav-icons">
                     <span><i class="fa-brands fa-twitter-square"></i></i></span>
                     <span><i class="fa-brands fa-facebook-square"></i></span>
