--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="p-images">
                     <img src="./img/1.webp" alt="img1" class="image hover-img">
                     <img src="./img/1b.webp" alt="img1b" class="image">
-                    <div class="like-heart">&#x2665;</div>
+                    <button class="like-heart">&#x2665;</button>
                     <div class="labels">
                         <div class="discount lab">-50%</div>
                         <div class="tag-1 lab">Sostenibilità</div>
@@ -59,7 +59,7 @@
                 <div class="p-images">
                     <img src="./img/2.webp" alt="img2" class="image hover-img">
                     <img src="./img/2b.webp" alt="img2b" class="image">
-                    <div class="like-heart">&#x2665;</div>
+                    <button class="like-heart">&#x2665;</button>
                     <div class="labels">
                         <div class="discount lab">-30%</div>
                     </div>
@@ -77,7 +77,7 @@
                 <div class="p-images">
                     <img src="./img/3.webp" alt="img3" class="image hover-img">
                     <img src="./img/3b.webp" alt="img3b" class="image">
-                    <div class="like-heart">&#x2665;</div>
+                    <button class="like-heart">&#x2665;</button>
                     <div class="labels">
                         <div class="discount lab">-30%</div>
                     </div>
@@ -95,7 +95,7 @@
                 <div class="p-images">
                     <img src="./img/4.webp" alt="img4" class="image hover-img">
                     <img src="./img/4b.webp" alt="img4b" class="image">
-                    <div class="like-heart">&#x2665;</div>
+                    <button class="like-heart">&#x2665;</button>
                     <div class="labels">
                         <div class="discount lab">-50%</div>
                         <div class="tag-1 lab">Sostenibilità</div>
@@ -114,7 +114,7 @@
                 <div class="p-images">
                     <img src="./img/5.webp" alt="img5" class="image hover-img">
                     <img src="./img/5b.webp" alt="img5b" class="image">
-                    <div class="like-heart">&#x2665;</div>
+                    <button class="like-heart">&#x2665;</button>
                 </div>
                 <div class="brand">Maya Deluxe</div>
                 <div class="product-name">Stripe Bodice</div>
@@ -129,7 +129,7 @@
                 <div class="p-images">
                     <img src="./img/6.webp" alt="img6" class="image hover-img">
                     <img src="./img/6b.webp" alt="img6b" class="image">
-                    <div class="like-heart">&#x2665;</div>
+                    <button class="like-heart">&#x2665;</button>
                     <div class="labels">
                         <div class="tag-1 lab">Sostenibilità</div>
                     </div>
