--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Document</title>
+    <title>Boolando</title>
 </head>
 <body>
     
@@ -21,9 +21,9 @@
                 </div>
                 <div class="logo"><img src="./img/boolean-logo.png" alt="boolean-logo"></div>
                 <div class="nav-icons">
-                    <span><i class="fa-solid fa-user"></i></span>
-                    <span><i class="fa-solid fa-heart"></i></span>
-                    <span><i class="fa-solid fa-bag-shopping"></i></span>
+                    <span><a href="#"><i class="fa-solid fa-user"></i></a></span>
+                    <span><a href="#"><i class="fa-solid fa-heart"></i></a></span>
+                    <span><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></span>
                 </div>
             </div>
         </div>
@@ -159,11 +159,11 @@
             <div class="footer-right">
                 <div style="text-align: center;"><strong>Trovaci anche su</strong></div>
                 <div class="nav-icons">
-                    <span><i class="fa-brands fa-twitter-square"></i></i></span>
-                    <span><i class="fa-brands fa-facebook-square"></i></span>
-                    <span><i class="fa-brands fa-instagram-square"></i></span>
-                    <span><i class="fa-brands fa-pinterest-square"></i></span>
-                    <span><i class="fa-brands fa-youtube"></i></span>
+                    <span><a href=""><i class="fa-brands fa-twitter-square"></i></a></span>
+                    <span><a href=""><i class="fa-brands fa-facebook-square"></i></a></span>
+                    <span><a href=""><i class="fa-brands fa-instagram-square"></i></a></span>
+                    <span><a href=""><i class="fa-brands fa-pinterest-square"></i></a></span>
+                    <span><a href=""><i class="fa-brands fa-youtube"></i></a></span>
                 </div>
             </div>
         </div>
